# cove-windows-toolkit

./: .gitignore  Cargo.toml  README.md  handoff.md
.github/workflows/: release.yml
crates/mod-bloatware/: Cargo.toml
crates/mod-bloatware/src/: lib.rs
crates/mod-bsod/: Cargo.toml
crates/mod-bsod/src/: lib.rs
crates/mod-cleanup/: Cargo.toml
crates/mod-cleanup/src/: lib.rs
crates/mod-diskhealth/: Cargo.toml
crates/mod-diskhealth/src/: lib.rs
crates/mod-drivers/: Cargo.toml
crates/mod-drivers/src/: lib.rs
crates/mod-eventlog/: Cargo.toml
crates/mod-eventlog/src/: lib.rs
crates/mod-health/: Cargo.toml
crates/mod-health/src/: lib.rs
crates/mod-netdiag/: Cargo.toml
crates/mod-netdiag/src/: lib.rs
crates/mod-network/: Cargo.toml
crates/mod-network/src/: lib.rs
crates/mod-performance/: Cargo.toml
crates/mod-performance/src/: lib.rs
crates/mod-power/: Cargo.toml
crates/mod-power/src/: lib.rs
crates/mod-privacy/: Cargo.toml
crates/mod-privacy/src/: lib.rs
crates/mod-report/: Cargo.toml
crates/mod-report/src/: lib.rs
crates/mod-restore/: Cargo.toml
crates/mod-restore/src/: lib.rs
crates/mod-runtimes/: Cargo.toml
crates/mod-runtimes/src/: lib.rs
crates/mod-security/: Cargo.toml
crates/mod-security/src/: lib.rs
crates/mod-services/: Cargo.toml
crates/mod-services/src/: lib.rs
crates/mod-sfc/: Cargo.toml
crates/mod-sfc/src/: lib.rs
crates/mod-startup/: Cargo.toml
crates/mod-startup/src/: lib.rs
crates/mod-sysinfo/: Cargo.toml
crates/mod-sysinfo/src/: gather.ps1  lib.rs
crates/mod-temps/: Cargo.toml
crates/mod-temps/resources/: .gitignore
crates/mod-temps/src/: lib.rs  temps.ps1
crates/mod-uninstall/: Cargo.toml
crates/mod-uninstall/src/: lib.rs  list_programs.ps1  scan_leftovers.ps1
crates/mod-updates/: Cargo.toml
crates/mod-updates/src/: lib.rs
crates/mod-visual/: Cargo.toml
crates/mod-visual/src/: lib.rs
crates/optimizer-app/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
crates/optimizer-app/icons/: generate-icon.py
crates/optimizer-app/resources/lhm/: .gitignore  README.md
crates/optimizer-app/src/: main.rs  portable.rs  scan.rs  security_scan.rs
crates/optimizer-app/src/commands/: mod.rs
crates/optimizer-core/: Cargo.toml
crates/optimizer-core/src/: lib.rs  operation.rs  types.rs  undo.rs
crates/optimizer-helper/: Cargo.toml
crates/optimizer-helper/src/: main.rs
docs/: SMOKE-TEST.md
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/components/: BloatwarePanel.css  BloatwarePanel.tsx  BsodPanel.css  BsodPanel.tsx  CategoryPanel.css  CategoryPanel.tsx  CleanupPanel.css  CleanupPanel.tsx  ConfirmDialog.css  ConfirmDialog.tsx  Dashboard.css  Dashboard.tsx  DiffPanel.css  DiffPanel.tsx  DiskHealthPanel.css  DiskHealthPanel.tsx  DriversPanel.css  DriversPanel.tsx  EventLogPanel.css  EventLogPanel.tsx  HealthPanel.css  HealthPanel.tsx  HistoryPanel.css  HistoryPanel.tsx  Icon.tsx  NetDiagPanel.css  NetDiagPanel.tsx  PerformancePanel.css  PerformancePanel.tsx  PowerPanel.css  PowerPanel.tsx  PrivacyPanel.css  PrivacyPanel.tsx  RestorePanel.css  RestorePanel.tsx  RuntimesPanel.css  RuntimesPanel.tsx  SecurityPanel.css  SecurityPanel.tsx  ServicesPanel.css  (+19 more)
ui/src/lib/: format.ts  tauri.ts
