[workspace]
resolver = "2"
members = [
    "crates/optimizer-core",
    "crates/optimizer-helper",
    "crates/optimizer-app",
    "crates/mod-visual",
    "crates/mod-cleanup",
    "crates/mod-privacy",
    "crates/mod-services",
    "crates/mod-startup",
    "crates/mod-power",
    "crates/mod-network",
    "crates/mod-health",
    "crates/mod-eventlog",
    "crates/mod-bsod",
    "crates/mod-drivers",
    "crates/mod-netdiag",
    "crates/mod-updates",
    "crates/mod-report",
    "crates/mod-restore",
    "crates/mod-sfc",
    "crates/mod-sysinfo",
    "crates/mod-temps",
    "crates/mod-uninstall",
    "crates/mod-bloatware",
    "crates/mod-performance",
    "crates/mod-runtimes",
    "crates/mod-security",
    "crates/mod-diskhealth",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = ["Cove"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
