[package]
name = "optimizer-app"
version.workspace = true
edition.workspace = true

[dependencies]
optimizer-core = { path = "../optimizer-core" }
mod-visual = { path = "../mod-visual" }
mod-health = { path = "../mod-health" }
mod-cleanup = { path = "../mod-cleanup" }
mod-privacy = { path = "../mod-privacy" }
mod-services = { path = "../mod-services" }
mod-startup = { path = "../mod-startup" }
mod-power = { path = "../mod-power" }
mod-network = { path = "../mod-network" }
mod-eventlog = { path = "../mod-eventlog" }
mod-bsod = { path = "../mod-bsod" }
mod-drivers = { path = "../mod-drivers" }
mod-netdiag = { path = "../mod-netdiag" }
mod-updates = { path = "../mod-updates" }
mod-report = { path = "../mod-report" }
mod-restore = { path = "../mod-restore" }
mod-sfc = { path = "../mod-sfc" }
mod-sysinfo = { path = "../mod-sysinfo" }
mod-temps = { path = "../mod-temps" }
mod-uninstall = { path = "../mod-uninstall" }
mod-bloatware = { path = "../mod-bloatware" }
mod-performance = { path = "../mod-performance" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
hostname = "0.4"
chrono.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
